# treat-or-trick

./: .env.development.local.example  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.cursor/rules/: ai-integration.mdc  api-design.mdc  git-workflow.mdc  global.mdc  graphiti-memory.mdc  mcp-development.mdc  temporal-workflows.mdc  testing.mdc
api/: index.py
app/: __init__.py  config.py  main.py
app/api/: router.py
app/api/v1/: chat.py  meta.py  questions.py
app/models/: __init__.py  chat.py  errors.py  questions.py
app/services/: ai_service.py  storage_service.py
cursor-notes/: README.md  cursor-quickstart-guide-dec-2025.md  cursor-rules-feedback.md
docs/: PART2_IMPLEMENTATION_NOTES.md
scripts/: upstash_validation.py
tests/: response.json  test_api.py  test_payload.json
