[project]
name = "treat-or-hell"
version = "0.1.0"
description = "A FastAPI app that lets you chat with an Angel using the OpenAI Chat Completions API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "tenacity>=8.0.0",
    "upstash-redis>=1.5.0",
    "requests>=2.32.5",
]

